--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=springboot
+spring.datasource.url=jdbc:mysql://192.168.0.64:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8
+#spring.datasource.username=root
+#spring.datasource.password=springboot
+spring.datasource.username=admin
+spring.datasource.password=admin
 
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
